fix spacing

--- a/style.css
+++ b/style.css
@@ -559,6 +559,7 @@ button:hover {
         flex-flow: column;
         justify-content: center;
         align-items: center;
+        padding-bottom: 40px;
     }
 
     .about h2 {
